mutual information with translation transform added but poor performace (as expected) transitioning to affine transformation code, then hurry to do the novel stuff once the registration is done

--- a/PictureAnalysis/CMakeLists.txt
+++ b/PictureAnalysis/CMakeLists.txt
@@ -22,8 +22,8 @@ else()
   set(Glue ItkVtkGlue)
 endif()
 
+add_subdirectory (CompositeFilter)
+include_directories ("${PROJECT_SOURCE_DIR}/CompositeFilter")
 
-
-add_executable(PictureAnalysis PictureAnalysis.cxx)
-
-target_link_libraries(PictureAnalysis ${Glue} ${VTK_LIBRARIES} ${ITK_LIBRARIES})
+add_executable (PictureAnalysis pictureAnalysis.cxx)
+target_link_libraries (PictureAnalysis ${Glue} ${VTK_LIBRARIES} ${ITK_LIBRARIES} ${CompositeFilter})
